# crane_x7_pcl_pickup

./: CMakeLists.txt  README.md  package.xml
scripts/: object_position.py  object_position2.py  object_position3.py  pick_up_object.py  pose_groupstate_example.py
src/: close_position.cpp  pcl_clustering.cpp  pcl_planefil.cpp  pcl_seg.cpp
